fix(wrap): Wrap the pre tag, to avoid horizontal scroll

--- a/client/styles.css
+++ b/client/styles.css
@@ -61,6 +61,11 @@ body {
 #terminal pre {
 	margin: 0;
 	font-size: 25px;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 #input {
